# bridge

./: CMakeLists.txt  main.cpp
include/devices/: Device.hpp  Radio.hpp  Tv.hpp
include/remote_controllers/: AdvancedRemoteControl.hpp  RemoteControl.hpp
src/devices/: Radio.cpp  Tv.cpp
src/remote_controllers/: AdvancedRemoteControl.cpp  RemoteControl.cpp
